# LR6

Task_1/: CMakeLists.txt  GTestTask_3.cpp  Task_1.cpp
Task_2/: CMakeLists.txt  GTestTask_2.cpp  Task_2.cpp
Task_3/: CMakeLists.txt  Task_3.cpp
